--- a/06.Web_Crawling.ipynb
+++ b/06.Web_Crawling.ipynb
@@ -55,7 +55,8 @@
     "1. df.drop( 'index이름'  , axis = 0 )\n",
     "1. df.drop( 'column이름' ,  axis = 1 )\n",
     "1. df.index.tolist()\n",
-    "1. df.column.tolist()"
+    "1. df.column.tolist()\n",
+    "1. pd.pivot_table(df,index = [], values = [], aggfunc = [], margins = True)"
    ]
   },
   {
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +233,7 @@
        "1  http://www.cgv.co.kr  서울특별시  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20180102\n"
+      "20180405\n"
      ]
     },
     {
@@ -355,78 +356,78 @@
        "      <th>0</th>\n",
        "      <td>005930</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2551000</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>169485</td>\n",
-       "      <td>432677351468</td>\n",
-       "      <td>2569000</td>\n",
-       "      <td>2570000</td>\n",
-       "      <td>2539000</td>\n",
-       "      <td>329330258194000</td>\n",
-       "      <td>17.27</td>\n",
-       "      <td>129098494</td>\n",
-       "      <td>68095088</td>\n",
-       "      <td>52.75</td>\n",
+       "      <td>2446000</td>\n",
+       "      <td>100000</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>162217</td>\n",
+       "      <td>391102410000</td>\n",
+       "      <td>2370000</td>\n",
+       "      <td>2451000</td>\n",
+       "      <td>2367000</td>\n",
+       "      <td>314033364324000</td>\n",
+       "      <td>16.40</td>\n",
+       "      <td>128386494</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>000660</td>\n",
        "      <td>SK하이닉스</td>\n",
-       "      <td>76600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>2014838</td>\n",
-       "      <td>154679174100</td>\n",
-       "      <td>77300</td>\n",
-       "      <td>77300</td>\n",
-       "      <td>76200</td>\n",
-       "      <td>55764981159000</td>\n",
-       "      <td>2.92</td>\n",
+       "      <td>82500</td>\n",
+       "      <td>2100</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2114061</td>\n",
+       "      <td>173435887100</td>\n",
+       "      <td>82200</td>\n",
+       "      <td>82800</td>\n",
+       "      <td>81200</td>\n",
+       "      <td>60060195112500</td>\n",
+       "      <td>3.14</td>\n",
        "      <td>728002365</td>\n",
-       "      <td>346184551</td>\n",
-       "      <td>47.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>005935</td>\n",
-       "      <td>삼성전자우</td>\n",
-       "      <td>2097000</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>21940</td>\n",
-       "      <td>45532420000</td>\n",
-       "      <td>2096000</td>\n",
-       "      <td>2097000</td>\n",
-       "      <td>2058000</td>\n",
-       "      <td>38271466260000</td>\n",
-       "      <td>2.01</td>\n",
-       "      <td>18250580</td>\n",
-       "      <td>15021675</td>\n",
-       "      <td>82.31</td>\n",
+       "      <td>068270</td>\n",
+       "      <td>셀트리온</td>\n",
+       "      <td>304000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1368247</td>\n",
+       "      <td>404638933500</td>\n",
+       "      <td>291500</td>\n",
+       "      <td>307000</td>\n",
+       "      <td>283500</td>\n",
+       "      <td>37290592896000</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>122666424</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     종목코드     종목명      현재가    대비  등락률      거래량          거래대금       시가  \\\n",
-       "0  005930    삼성전자  2551000  3000  0.1   169485  432677351468  2569000   \n",
-       "1  000660  SK하이닉스    76600   100  0.1  2014838  154679174100    77300   \n",
-       "2  005935   삼성전자우  2097000  7000  0.3    21940   45532420000  2096000   \n",
+       "     종목코드     종목명      현재가      대비  등락률      거래량          거래대금       시가  \\\n",
+       "0  005930    삼성전자  2446000  100000  4.3   162217  391102410000  2370000   \n",
+       "1  000660  SK하이닉스    82500    2100  2.6  2114061  173435887100    82200   \n",
+       "2  068270    셀트리온   304000   10000  3.4  1368247  404638933500   291500   \n",
        "\n",
        "        고가       저가             시가총액  시가총액비중(%)  상장주식수(천주)  외국인 보유주식수  \\\n",
-       "0  2570000  2539000  329330258194000      17.27  129098494   68095088   \n",
-       "1    77300    76200   55764981159000       2.92  728002365  346184551   \n",
-       "2  2097000  2058000   38271466260000       2.01   18250580   15021675   \n",
+       "0  2451000  2367000  314033364324000      16.40  128386494        NaN   \n",
+       "1    82800    81200   60060195112500       3.14  728002365        NaN   \n",
+       "2   307000   283500   37290592896000       1.95  122666424        NaN   \n",
        "\n",
        "   외국인 지분율(%)  \n",
-       "0       52.75  \n",
-       "1       47.55  \n",
-       "2       82.31  "
+       "0         NaN  \n",
+       "1         NaN  \n",
+       "2         NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +435,7 @@
    "source": [
     "# 특정날짜 국내 주가정보 수집\n",
     "from datetime import datetime\n",
-    "date = datetime(2018,1,2).strftime('%Y%m%d')\n",
+    "date = datetime(2018,4,5).strftime('%Y%m%d')\n",
     "print(date)\n",
     "df = stock_master_price(date)\n",
     "df.head(3)"
