--- a/Crawling.ipynb
+++ b/Crawling.ipynb
@@ -78,32 +78,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-04-09</th>\n",
-       "      <td>KRX:005930</td>\n",
-       "      <td>2413000.0</td>\n",
-       "      <td>2472000.0</td>\n",
-       "      <td>2410000.0</td>\n",
-       "      <td>2460000.0</td>\n",
-       "      <td>197153</td>\n",
+       "      <th>2018-04-11</th>\n",
+       "      <td>KOSDAQ:091990</td>\n",
+       "      <td>103100.0</td>\n",
+       "      <td>103200.0</td>\n",
+       "      <td>100000.0</td>\n",
+       "      <td>100100.0</td>\n",
+       "      <td>751870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-04-10</th>\n",
-       "      <td>KRX:005930</td>\n",
-       "      <td>2427000.0</td>\n",
-       "      <td>2461000.0</td>\n",
-       "      <td>2402000.0</td>\n",
-       "      <td>2444000.0</td>\n",
-       "      <td>218342</td>\n",
+       "      <th>2018-04-12</th>\n",
+       "      <td>KOSDAQ:091990</td>\n",
+       "      <td>100500.0</td>\n",
+       "      <td>101300.0</td>\n",
+       "      <td>98300.0</td>\n",
+       "      <td>98500.0</td>\n",
+       "      <td>851185</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  code       open       high        low      close  volume\n",
-       "date                                                                      \n",
-       "2018-04-09  KRX:005930  2413000.0  2472000.0  2410000.0  2460000.0  197153\n",
-       "2018-04-10  KRX:005930  2427000.0  2461000.0  2402000.0  2444000.0  218342"
+       "                     code      open      high       low     close  volume\n",
+       "date                                                                     \n",
+       "2018-04-11  KOSDAQ:091990  103100.0  103200.0  100000.0  100100.0  751870\n",
+       "2018-04-12  KOSDAQ:091990  100500.0  101300.0   98300.0   98500.0  851185"
       ]
      },
      "execution_count": 1,
@@ -112,8 +112,9 @@
     }
    ],
    "source": [
+    "code = \"KOSDAQ:091990\"\n",
     "from googlefinance.get import get_data\n",
-    "get_data('KRX:005930', '3d')"
+    "get_data(code, '3d')"
    ]
   },
   {
@@ -125,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'KRX:005930'}\n"
+      "{'KOSDAQ:091990', 'KRX:005930'}\n"
      ]
     },
     {
@@ -156,25 +157,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2015-04-13 10:00:00</th>\n",
-       "      <td>KRX:005930</td>\n",
-       "      <td>1468000.0</td>\n",
-       "      <td>1469000.0</td>\n",
+       "      <th>2017-07-28 10:00:00</th>\n",
+       "      <td>KOSDAQ:091990</td>\n",
+       "      <td>43650.0</td>\n",
+       "      <td>47450.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-04-13 11:00:00</th>\n",
-       "      <td>KRX:005930</td>\n",
-       "      <td>1469000.0</td>\n",
-       "      <td>1471000.0</td>\n",
+       "      <th>2017-07-28 11:00:00</th>\n",
+       "      <td>KOSDAQ:091990</td>\n",
+       "      <td>47150.0</td>\n",
+       "      <td>47700.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           code        low      close\n",
-       "2015-04-13 10:00:00  KRX:005930  1468000.0  1469000.0\n",
-       "2015-04-13 11:00:00  KRX:005930  1469000.0  1471000.0"
+       "                              code      low    close\n",
+       "2017-07-28 10:00:00  KOSDAQ:091990  43650.0  47450.0\n",
+       "2017-07-28 11:00:00  KOSDAQ:091990  47150.0  47700.0"
       ]
      },
      "execution_count": 2,
@@ -183,7 +184,7 @@
     }
    ],
    "source": [
-    "df = get_data(['KRX:005930', 'KRX:000660'], '3Y', '3600')\n",
+    "df = get_data([code, 'KRX:005930', 'KRX:000660'], '3Y', '3600')\n",
     "print(set(df.code))\n",
     "df.iloc[:,[0,3,4]].head(2)"
    ]
@@ -221,25 +222,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2017-09-15 12:40:00</th>\n",
-       "      <td>2506000.0</td>\n",
-       "      <td>2512000.0</td>\n",
-       "      <td>2961</td>\n",
+       "      <th>2017-09-18 09:10:00</th>\n",
+       "      <td>49100.0</td>\n",
+       "      <td>49250.0</td>\n",
+       "      <td>135140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2017-09-15 12:50:00</th>\n",
-       "      <td>2506000.0</td>\n",
-       "      <td>2510000.0</td>\n",
-       "      <td>2364</td>\n",
+       "      <th>2017-09-18 09:20:00</th>\n",
+       "      <td>48800.0</td>\n",
+       "      <td>48900.0</td>\n",
+       "      <td>60080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           low      close  volume\n",
-       "2017-09-15 12:40:00  2506000.0  2512000.0    2961\n",
-       "2017-09-15 12:50:00  2506000.0  2510000.0    2364"
+       "                         low    close  volume\n",
+       "2017-09-18 09:10:00  49100.0  49250.0  135140\n",
+       "2017-09-18 09:20:00  48800.0  48900.0   60080"
       ]
      },
      "execution_count": 3,
@@ -248,7 +249,7 @@
     }
    ],
    "source": [
-    "get_data('KRX:005930', '7M', '600').iloc[:,3:].head(2)"
+    "get_data(code, '7M', '600').iloc[:,3:].head(2)"
    ]
   },
   {
